fdo#64256 writerfilter: handle void GraphicURL in ListsManager::lcl_sprm

Change-Id: I4d8b1b527d5099781a36cc1265318c167205340e